# supertask

./: .gitignore  .readthedocs.yaml  CHANGES.md  LICENSE  README.md  cli.py  codecov.yml  core.py  cronjob_routes.py  cronjobs.json  database.py  job_seeder.py  jobs.py  jobstore_sqlalchemy.py  main.py  models.py  pyproject.toml  r2.txt  requirements-dev.txt  requirements.txt  scheduler.py  settings.py  test_cli.py  test_core.py  test_http.py  test_job.py  test_main.py  util.py
.github/: dependabot.yml
.github/workflows/: main.yml
docs/: backlog.md  conf.py  handbook.md  index.md  install.md  research.md  sandbox.md
examples/canonical/: timetable.yaml
examples/contrib/: cratedb_cleanup.py
examples/minimal/: hellodb.py
supertask/: cli.py  core.py  load.py  model.py  settings.py  util.py
supertask/contrib/: testing.py
supertask/http/: routes.py  service.py
supertask/provision/: database.py  seeder.py
supertask/store/: cratedb.py  mongodb.py
templates/: jobs.html
tests/: conftest.py  test_cli.py  test_core.py  test_http.py  test_job.py  test_model.py
