[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42", # At least v42 of setuptools required.
  "versioningit",
]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.0"

[project]
name = "supertask"
description = "Supertask, a convenience job scheduler"
readme = "README.md"
keywords = [
  "apscheduler",
  "cron",
  "interval",
  "jobs",
  "scheduler",
  "scheduling",
  "tasks",
  "toolkit",
]
license = { text = "AGPL 3, EUPL 1.2" }
authors = [
  { name = "Walter Behmann", email = "walter@crate.io" },
  { name = "Andreas Motl", email = "andreas.motl@crate.io" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Customer Service",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Telecommunications Industry",
  "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Adaptive Technologies",
  "Topic :: Communications",
  "Topic :: Database",
  "Topic :: Documentation",
  "Topic :: Education",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Office/Business",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Pre-processors",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Version Control",
  "Topic :: System :: Archiving",
  "Topic :: System :: Benchmark",
  "Topic :: System :: Clustering",
  "Topic :: System :: Distributed Computing",
  "Topic :: System :: Logging",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
dynamic = [
  "version",
]
dependencies = [
  "APScheduler<4",
  "click<9",
  "colorama<0.5",
  "colorlog<7",
  "crate[sqlalchemy]",
  "fastapi<0.110",
  "halo<0.1",
  "icecream<3",
  "Jinja2<4",
  "MarkupSafe<3",
  "pueblo[fileio]@ git+https://github.com/pyveci/pueblo@main",
  "pydantic<3",
  "python-dotenv[cli]<2",
  "python-multipart==0.0.6",
  "uvicorn<0.27",
  "watchdog<4",
]
[project.optional-dependencies]
develop = [
  "black<24",
  "mypy==1.8",
  "poethepoet<0.25",
  "pyproject-fmt<1.8",
  "ruff==0.1.14",
  "validate-pyproject<0.16",
]
release = [
  "build<2",
  "twine<5",
]
test = [
  "cratedb-toolkit==0.0.3",
  "httpx<0.27",
  "psycopg2-binary<3",
  "pytest<9",
  "pytest-cov<5",
  "pytest-mock<4",
]
[project.urls]
changelog = "https://github.com/pyveci/supertask/blob/main/CHANGES.md"
documentation = "https://github.com/pyveci/supertask"
homepage = "https://github.com/pyveci/supertask"
repository = "https://github.com/pyveci/supertask"
[project.scripts]
st = "supertask.cli:cli"
supertask = "supertask.cli:cli"

[tool.black]
line-length = 120

[tool.setuptools]
packages = ["supertask"]

[tool.coverage.run]
branch = false
omit = [
  "tests/*",
  "test_*.py",
]
source = ["supertask"]

[tool.coverage.report]
fail_under = 0
show_missing = true

[tool.mypy]
packages = ["supertask"]
exclude = []
check_untyped_defs = true
ignore_missing_imports = true
implicit_optional = true
install_types = true
non_interactive = true

[tool.pytest.ini_options]
addopts = """
  -rfEXs -p pytester --strict-markers --verbosity=3
  --cov --cov-report=term-missing --cov-report=xml
  """
minversion = "2.0"
log_level = "DEBUG"
log_cli_level = "DEBUG"
log_format = "%(asctime)-15s [%(name)-36s] %(levelname)-8s: %(message)s"
testpaths = [
  "tests",
]
xfail_strict = true
markers = [
]

[tool.ruff]
line-length = 120

select = [
  # Bandit
  "S",
  # Bugbear
  "B",
  # Builtins
  "A",
  # comprehensions
  "C4",
  # eradicate
  "ERA",
  # flake8-2020
  "YTT",
  # isort
  "I",
  # pandas-vet
  "PD",
  # print
  "T20",
  # Pycodestyle
  "E",
  "W",
  # Pyflakes
  "F",
  # return
  "RET",
]

extend-ignore = [
  # zip() without an explicit strict= parameter
  "B905",
  # df is a bad variable name. Be kinder to your future self.
  "PD901",
  # Unnecessary variable assignment before `return` statement
  "RET504",
  # Unnecessary `elif` after `return` statement
  "RET505",
  # Probable insecure usage of temporary file or directory
  "S108",
]

extend-exclude = [
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Allow use of `assert`, and `print`.
"test_*.py" = ["S101"]  # Allow use of `assert`, and `print`.
"examples/*" = ["T201"]  # Allow `print`



# ===================
# Tasks configuration
# ===================

[tool.poe.tasks]

check = [
  "lint",
  "test",
]

format = [
  { cmd = "black ." },
  # Configure Ruff not to auto-fix (remove!):
  # unused imports (F401), unused variables (F841), `print` statements (T201), and commented-out code (ERA001).
  { cmd = "ruff --fix --ignore=ERA --ignore=F401 --ignore=F841 --ignore=T20 --ignore=ERA001 ." },
  { cmd = "pyproject-fmt pyproject.toml" },
]

lint = [
  { cmd = "ruff ." },
  { cmd = "black --check ." },
  { cmd = "validate-pyproject pyproject.toml" },
  { cmd = "mypy" },
]

release = [
  { cmd = "python -m build" },
  { cmd = "twine upload dist/*" },
]

test = { cmd = "pytest" }
